--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  url_launcher: ^6.1.6
+  http: ^0.12.0+2
 
 
   # The following adds the Cupertino Icons font to your application.
